# PacketReader

./: .gitignore  .gitignore.swp  README.md  README.rst  pyproject.toml
.devcontainer/: devcontainer.json
PacketReader/: README.rst  setup.py
ProtocolReverse/: __init__.py  alignment.py  distance.py  ethernet.py  initialcluster.py  main.py  message.py  pcapreader.py  protocolrevrse.py  tcp.py  tokenize.py  utility.py
PyPcap/: ethernet.py  ip.py  packet.py  pcap.py  tcp.py  utility.py
PyPcapAnalyzer/: __init__.py  connection.py  ethernet.py  ip.py  packet.py  pcap.py  tcp.py
docs/: Makefile  conf.py  index.rst  make.bat  packet.rst
input/: test_ping_ip_reassemble.pcap  weather_channel_android_app.pcap
output/: Dst_192.168.137.11_35872_Src_74.125.224.27_80.tcpd  Dst_192.168.137.11_40999_Src_66.235.138.19_80.tcpd  Dst_192.168.137.11_44082_Src_198.78.223.126_80.tcpd  Dst_192.168.137.11_44528_Src_96.8.81.129_80.tcpd  Dst_192.168.137.11_55708_Src_96.8.81.129_80.tcpd  Dst_198.78.223.126_80_Src_192.168.137.11_44082.tcpd  Dst_66.235.138.19_80_Src_192.168.137.11_40999.tcpd  Dst_74.125.224.27_80_Src_192.168.137.11_35872.tcpd  Dst_96.8.81.129_80_Src_192.168.137.11_44528.tcpd  Dst_96.8.81.129_80_Src_192.168.137.11_55708.tcpd
src/: discover.py  ethernet.py  initialcluster.py  input.py  ip.py  main.py  message.py  pcapreader.py  tcp.py  test_text.txt  tokenize.py  utility.py
test/: test.py  test_TCP.py  test_alignment.py  test_ciba.py  test_distance.py  test_ethernet.py  test_initialcluster.py  test_ip.py  test_message.py  test_packet.py  test_pcap.pcap  test_pcap.py  (+2 more)
(+83 files in other folders)
