[tool.poetry]
name = "PacketReader"
version = "0.2.0"
description = "A pcap file parser"
authors = ["yuellin <linyue92@outlook.com>"]
license = "MIT"
readme = "README.rst"
packages = [
    { include = "PacketReader", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"